--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,9 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>1.7</maven.compiler.source>
     <maven.compiler.target>1.7</maven.compiler.target>
+	<sonar.projectKey>java-ndaho_batchs</sonar.projectKey>
+	<sonar.organization>java-ndaho</sonar.organization>
+	<sonar.host.url>https://sonarcloud.io</sonar.host.url>
   </properties>
 
   <dependencies>
